montserrat font, new video, google maps api key, fixed background cover on mobile

--- a/public/styles/site/components/_contact.scss
+++ b/public/styles/site/components/_contact.scss
@@ -4,7 +4,7 @@
 
 .option {
 	text-align: center;
-	font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	.option-title {
 		font-style: bold;
 		font-size: 36px;
@@ -25,5 +25,5 @@
 
 .interest-form {
 	margin: 20px;
-	font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
