--- a/public/styles/site/components/_layout.scss
+++ b/public/styles/site/components/_layout.scss
@@ -2,7 +2,7 @@
 body {
   height: 100%;
   margin: 0;
-  font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 //NAVBAR//
@@ -11,12 +11,12 @@ body .container .navbar-custom {
   .mobipos .navbar-nav li a {
     color: $white;
     margin-top: 5px;
-    font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   }
 }
 
 //FOOTER//
 #footer {
-  font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   @include footer($color-tertiary);
 }
