--- a/public/styles/site/partials/_partials.scss
+++ b/public/styles/site/partials/_partials.scss
@@ -3,7 +3,7 @@
 	background-color: $color;
 	height: $height;
 	color: $white;
-	font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 //FOOTER//
@@ -21,6 +21,9 @@
   	background-position: $position;
   	background-repeat: no-repeat;
   	background-size: cover;
+  	-webkit-background-size: cover;
+  	-moz-background-size: cover;
+  	-o-background-size: cover;
 	background-image: $image;
 	text-align: center;
 }
